hphp/test/quick/zend_closure_020.php.expectf
object(foo)#%d (2) {
  ["test":"foo":private]=>
  int(3)
  ["a"]=>
  object(Closure$foo::x;%s)#%d (1) {
    ["a":"Closure$foo::x;%s":private]=>
    *RECURSION*
  }
}
bool(true)
bool(true)

Fatal error: Cannot access private property foo::$test in %s on line 19
